# crossplane-watcher-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  commitizen-check.yml  create-release.yml  docker-publish.yml
cwo/: github_client.py  logger.py  main.py  notifier.py  operator.py  settings.py  watcher.py
docker/: Dockerfile  container-structure-test.yaml
docs/: getting-started.md
helm/crossplane-watcher/: Chart.yaml  README.md  values.yaml
helm/crossplane-watcher/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
helm/crossplane-watcher/tests/: deployment_test.yaml  rbac_test.yaml  secret_test.yaml  serviceaccount_test.yaml
tests/: conftest.py  test_github_client.py  test_main.py  test_notifier.py  test_operator.py  test_settings.py  test_watcher.py
tests/scripts/: fake-claim.yaml  fake-crd.yaml  simulate-events.sh
